nop/add-label.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  labels:
    version: 1.21.0
